# llm-search

./: .env_template  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  install.sh  install_linux.sh  output.txt  pyproject.toml  requirements.txt  run_docker.sh  setvars.sh
.github/workflows/: release.yml
.venv2/: pyvenv.cfg
dev/: gmft.ipynb  unstructured.ipynb
docker/: Dockerfile  entrypoint.sh
docs/: conf.py  configure_model.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/buid/doctrees/: configure_doc.doctree  configure_model.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/buid/html/: .buildinfo  configure_doc.html  configure_model.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/buid/html/_sources/: configure_doc.rst.txt
notebooks/: 1-basic-llm.ipynb  2-indexing-custom-dataset.ipynb  3-indexing-dataset-openai.ipynb  llmsearch_google_colab_demo.ipynb
notebooks/dev/: dev_config.yaml
sample_data/: all-weather-leveraged-portfolio.md
sample_data/markdown/: apache-spark-programming-dataframes.md
sample_templates/: config.template.yaml  config_template.yaml  databricks-docs.yaml  msft-docs.yaml  obsidian_conf.yaml  obsidian_conf_litellm.yaml  obsidian_conf_test_rerank.yaml  openai_embeddings.yaml  pdf_library.yaml
sample_templates/generic/: config_template.yaml
sample_templates/llm/: auto-gptq.yaml  huggingface.yaml  litellm.yaml  llamacpp.yaml  openai.yaml  openai_gp4omini.yaml
sample_templates/test-templates/: pdf_library.yaml
src/llmplay/: chroma.py  llm.py  main.py  nodes.py  parsers.py
src/llmsearch/: _version.py  api.py  chroma.py  cli.bck  cli.py  config.py  embeddings.py  interact.py  llm.py  main.py  nodes.py  parsers.py  postprocess.py  process.py  prompts.py  ranking.py  rerank.py  splade.py  utils.py  validators.py  vector_stores.py  webapp.py
src/llmsearch/database/: config.py  crud.py  models.py
src/llmsearch/models/: abstract.py  autogptq.py  azureopenai.py  config.py  hf.py  huggingface.py  llama.py  openai.py  utils.py
src/llmsearch/obsolete/: llm.py  main.py  prompts.py
src/llmsearch/parsers/: doc.py  experimental.py  generic.py  markdown.py  nodes.py  pdf.py  splitter.py  unstructured.py
src/llmsearch/parsers/images/: gemini_parser.py  generic.py
src/llmsearch/parsers/tables/: azuredocint_parser.py  generic.py  gmft_parser.py
tests/: test_config.py  test_conversation_history.py  test_embeddings_update.py  test_table_splitting.py
